fixed template URLs, added template conditionals for Log-in, Log-out and Register

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -31,6 +31,6 @@
     </section>
 
     <aside class="sign_up">
-        <h4>No account? <a href="/accounts/register/">Sign up now!</a></h4>
+        <h4>No account? <a href="{% url 'accounts:register' %}">Sign up now!</a></h4>
     </aside>
 {% endblock %}
