--- a/templates/base.html
+++ b/templates/base.html
@@ -69,30 +69,48 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <!-- View All User's Collections -->
-                        <li>
-                            <a href="/{{ request.user }}/collections">My Gallery</a>
-                        </li>
-                        <!-- View Collection create Form -->
-                        <li>
-                            <a href="/{{ request.user }}/collection/create/">New Collection</a>
-                        </li>
-                        <!-- View Collectible create Form -->
-                        <li>
-                            <a href="/{{ request.user }}/collectible/create/">Add Collectible</a>
-                        </li>
-                        <li>
-                            <a href="{% url "about" %}">About</a>
-                        </li>
-                        <li>
-                            <a href="{% url "contact" %}">Contact</a>
-                        </li>
-                        <li>
-                            <a href="/accounts/login">Log In</a>
-                        </li>
+                        {% if request.user.is_authenticated %}  {# Must be signed in #}
+                            <li>
+                                <a href="{% url 'collections:collections_gallery' username=request.user %}">My Gallery</a>
+                            </li>
+                            <!-- View Collection create Form -->
+                            <li>
+                                <a href="{% url 'collections:collection_form' username=request.user %}">New Collection</a>
+                            </li>
+                            <!-- View Collectible create Form -->
+                            <li>
+                                <a href="{% url 'collections:collectible_form' username=request.user %}">Add Collectible</a>
+                            </li>
+                        {% endif %}
+
+                            <li>
+                                <a href="{% url "about" %}">About</a>
+                            </li>
+                            <li>
+                                <a href="{% url "contact" %}">Contact</a>
+                            </li>
+                        {% if request.user.is_anonymous %}
+                            <li>
+                                <a href="{% url 'accounts:register' %}">Register</a>
+                            </li>
+                        {% endif %}
+                        {% if request.user.is_authenticated %}
+                            <li>
+                                <a href="{% url 'accounts:logout' %}">Log out</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{% url 'accounts:login' %}">Log In</a>
+                            </li>
+                        {% endif %}
                     </ul>
+                {% if request.user.is_authentciated %}
                     <aside id="logged_in">
                         <p>You are logged in as {{ request.user }}</p>
                     </aside>
+                    {% else %}
+
+                {% endif %}
 
                 </div>
                 <!-- /.navbar-collapse -->
