--- a/collection/templates/collection/collections_public.html
+++ b/collection/templates/collection/collections_public.html
@@ -20,17 +20,23 @@
             <div class="row">
                 {# Collection heading #}
                 <div class="col-lg-12">
-                    <h1 class="page-header">{{ collection.name }} Collection</h1>
+                    <h1 class="page-header">Public Collections</h1>
                     <h3 class="page-header">Gallery View</h3>
                 </div>
+                {% if request.user.is_anonymous %}
+                {# FOR LOOP - Show all collectibles in Collection #}
+                {% for collection in collections %}
+                     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                         <div>
+{#                            <a href="{% url 'collections:collection_detail' username=request.user collection_slug=collection.slug %}">#}
+                                <img class="thumbnail img-responsive" alt="user_collection_images" src="{{ collection.image.url }}"/>
+{#                            </a>#}
+                             <div>{{ collection.name }} by {{ collection.owner }}</div>
+                         </div>
+                     </div>
+                {% endfor %}
+                {% endif %}
 
-                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                     <figure>
-                        {# Images representing each Public Collection #}
-                        <img class="thumbnail img-responsive" alt="collectible_image" src="{{ collection.image.url }}"/>
-                        <figcaption>{{ collection.name }} by {{ collection.owner }}</figcaption>
-                     </figure>
-                 </div>
             </div> <!-- end .row-->
         </div> <!-- end .container-->
 
