--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
                             </li>
                         {% endif %}
                     </ul>
-                {% if request.user.is_authentciated %}
+                {% if request.user.is_authenticated %}
                     <aside id="logged_in">
                         <p>You are logged in as {{ request.user }}</p>
                     </aside>
