--- a/collection/templates/collection/collections_public.html
+++ b/collection/templates/collection/collections_public.html
@@ -23,7 +23,7 @@
                     <h1 class="page-header">Public Collections</h1>
                     <h3 class="page-header">Gallery View</h3>
                 </div>
-                {% if request.user.is_anonymous %}
+
                 {# FOR LOOP - Show all collectibles in Collection #}
                 {% for collection in collections %}
                      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -31,11 +31,11 @@
 {#                            <a href="{% url 'collections:collection_detail' username=request.user collection_slug=collection.slug %}">#}
                                 <img class="thumbnail img-responsive" alt="user_collection_images" src="{{ collection.image.url }}"/>
 {#                            </a>#}
-                             <div>{{ collection.name }} by {{ collection.owner }}</div>
+                             <div>{{ collection.name|linebreaks  }} by {{ collection.owner|linebreaks }} Created on: {{ collection.created|date:"F j, Y"}}</div>
                          </div>
                      </div>
                 {% endfor %}
-                {% endif %}
+
 
             </div> <!-- end .row-->
         </div> <!-- end .container-->
