--- a/collection/templates/collection/collectible.html
+++ b/collection/templates/collection/collectible.html
@@ -58,25 +58,9 @@
         </div>
     </section>
 
-    {% if request.user.is_authenticated %}  {# only is user is logged in #}
-    <section>
-     <!-- EDIT BUTTON AREA -->
-        <!--Arrows to open and close Button Panel-->
-        <div id="arrow_area">
-                <span id="down_arrow">&#x261E;</span>
-                <span id="up_arrow">&#x2620;</span>
-        </div>
-
-        <aside id="edit_btns_area">
-            <!-- Buttons Panel - Starts Hidden-->
-            <div id="collectible_option_btns">
-                <a id="edit_btn" class="save btn btn-default" href="{% url 'collections:collectible_edit' username=request.user collectible_slug=collectible.slug %}">Edit</a>
-                <a id="addnew_btn" class="save btn btn-default" href="{% url 'collections:collectible_form' username=request.user %}">Add Another</a>
-                <a id="view_coll_btn" class="save btn btn-default" href="{% url 'collections:collection_detail' username=request.user collection_slug=collectible.collection.slug %}">View Collection</a>
-            </div>
-        </aside>
-
-    </section>
-    {% endif %}
+    <!-- EDIT-ADD-VIEW BUTTON AREA -->
+    {%  block edit_add_view_buttons %}
+        {% include 'collection/edit_add_view_buttons.html' %}
+    {%  endblock %}
 
 {% endblock %}
