--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -89,22 +89,10 @@
                             </div>
                         </section>
 
-                        <!-- EDIT BUTTON AREA -->
-{#                        <!--Arrows to open and close Button Panel-->#}
-{#                        <div id="arrow_area">#}
-{#                                <span id="down_arrow">&#x261E;</span>#}
-{#                                <span id="up_arrow">&#x2620;</span>#}
-{#                        </div>#}
-                        {% if request.user.is_authenticated %}
-                            <aside id="modal_edit_btns_area">
-                                <!-- Buttons Panel - Starts Hidden-->
-                                <div id="Modal_collectible_option_btns">
-                                    <a id="edit_btn" class="save btn btn-default" href="{% url 'collections:collectible_edit' username=request.user collectible_slug=collectible.slug %}">Edit</a>
-                                    <a id="addnew_btn" class="save btn btn-default" href="{% url 'collections:collectible_form' username=request.user %}">Add Another</a>
-                                    <a id="view_coll_btn" class="save btn btn-default" href="{% url 'collections:collection_detail' username=request.user collection_slug=collectible.collection.slug %}">View Collection</a>
-                                </div>
-                            </aside>
-                        {% endif %}
+                        <!-- EDIT-ADD-VIEW BUTTON AREA -->
+                        {%  block edit_add_view_buttons %}
+                            {% include 'collection/edit_add_view_buttons.html' %}
+                        {%  endblock %}
 
                     </div>  <!-- end of .modal-content -->
                 </div> <!-- end of .modal -->
