--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     margin: 0;
+    padding-top: 2%;
     font-size: 3em;
 }
 
@@ -162,7 +163,7 @@
 #collectible_option_btns{
     display: none;
     justify-content: center;
-    margin: 1%;
+    margin: 0;
 }
 
 
