--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,9 +10,9 @@
                     </div>
                 </div>
                 <div>
-                    <button id='logout_btn'><a href="{% url 'accounts:logout' %}">Log out</a></button>
+                    <button id='logout_btn'><a href="{% url 'about' %}">About</a></button>
+                    <button id='logout_btn'><a href="{% url 'contact' %}">Contact</a></button>
                 </div>
-
             {% endblock %}
         </footer>
 
