--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -77,14 +77,15 @@
 
                                 <div class="additional_links_area">
                                 <h4 id="add_links">Additional Links:</h4>
-                                    <div class="coll_links_area">
-                                        {% for link in collectible.links.all %}
-                                            {# to solve spaces in URLs us regex (?P<name>[\w\ ]+) #}
-                                            <a class="btn_small" href="{{ link.url }}">{{ link.name }}</a>
-                                        {% endfor %}
-                                            <!-- input button as PDF download -->
-{#                                          <input type="button" onclick="window.location='{{ link_form.url }}';_gaq.push(['_trackEvent', 'Downloads', 'eBooks', 'Burmese Monks Tales PDF']);" name="Add" value="{{ link_form.name }}" class="btn">#}
-                                    </div>
+                                    {% if request.user.is_authenticated %}
+                                        <div class="coll_links_area">
+                                            {% for link in collectible.links.all %}
+                                                <a class="btn_small" href="{{ link.url }}">{{ link.name }}</a>
+                                            {% endfor %}
+                                        </div>
+                                     {%  else %}
+                                        <h4>Log in or <a href="{% url 'accounts:register' %}">Register</a> to get access to Additional Links and downloads.</h4>
+                                    {% endif %}
                                 </div>
                             </div>
                         </section>
