--- a/templates/contact.html
+++ b/templates/contact.html
@@ -201,13 +201,13 @@
     </div>
 
     <!-- Success message -->
-    <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+    <div class="alert alert-success" role="alert" id="success_message">Success! <i class="glyphicon glyphicon-thumbs-up"> Thanks for contacting us, we will get back to you shortly.</i></div>
 
     <!-- Button -->
     <div class="form-group">
       <label class="col-md-4 control-label"></label>
       <div class="col-md-4">
-        <button type="submit" class="btn btn-warning btn-12Wrapper" >Send <span class="glyphicon glyphicon-send"></span></button>
+        <button type="submit" class="btn btn-warning btn-12Wrapper">Send <span class="glyphicon glyphicon-send"></span></button>
       </div>
     </div>
 
