--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {# Bootstrap code form https://github.com/BlackrockDigital/startbootstrap-round-about/blob/master/index.html #}
 {% block content %}
 
@@ -9,8 +11,8 @@
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">About Us
-                    <br><small>It's Nice to Meet You!</small>
+                <h2 class="page-header">About Shelfio
+                    <br><small>Meet the members of the team!</small>
                 </h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam
                     quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
@@ -23,47 +25,53 @@
                 <h2 class="page-header">Our Team</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>Filet Minyon
-                    <br><small>Culinary Leader</small>
+                <img class="img-circle img-responsive img-center" src="{% static 'images/staff/Elizabeth.jpg' %}" alt="">
+                <h3>Ari Stockrasee
+                    <br><small>Entitlement Czar</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>Gowen Geter
-                    <br><small>Team Rouser</small>
+                <img class="img-circle img-responsive img-center" src="{% static 'images/staff/michael.jpg' %}" alt="">
+                <h3>Moon Walker
+                    <br><small>Team Dancer</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="{% static 'images/staff/johnhurt.jpeg' %}" alt="">
                 <h3>O. Mygawd
                     <br><small>Team Pastor</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="{% static 'images/staff/lawyer.jpg' %}" alt="">
                 <h3>Sue Yoo
                     <br><small>Lawyer</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>Dyl Pickle
-                    <br><small>Marketing</small>
+                <img class="img-circle img-responsive img-center" src="{% static 'images/staff/keanu.jpg' %}" alt="">
+                <h3>Rye Chus
+                    <br><small>Lead Dude</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="{% static 'images/staff/jerry.jpg' %}" alt="">
                 <h3>Hardy Harr
                     <br><small>Joker</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
+
         </div>
     </div>
 
