added User profile image to nav bar, fixed home page redirects

--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -84,7 +84,7 @@
                                             {% endfor %}
                                         </div>
                                      {%  else %}
-                                        <h4>Log in or <a href="{% url 'accounts:register' %}">Register</a> to get access to Additional Links and downloads.</h4>
+                                        <h4><a href="{% url 'accounts:login' %}">Log in</a> or <a href="{% url 'accounts:register' %}">Register</a> to get access to Additional Links and downloads.</h4>
                                     {% endif %}
                                 </div>
                             </div>
