--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,8 @@
                     </ul>
                 {% if request.user.is_authenticated %}
                     <aside id="logged_in">
-                        <p>You are logged in as {{ request.user }}</p>
+                        <p>You are logged in as <span class="user">{{ request.user }}</span>
+                        <img class="userimage" src="{{ request.user.image.url }}"></p>
                     </aside>
                     {% else %}
 
