--- a/collection/static/collection/css/collection.css
+++ b/collection/static/collection/css/collection.css
@@ -93,12 +93,6 @@
 
 /* ----- BUTTONS for downloads and links ------*/
 
-/*.coll_links_area {*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*justify-content: center;*/
-/*}*/
-
 .additional_links_area {
     width: 95%;
     margin: 5% 0 15% 0;
@@ -128,8 +122,17 @@
 
 
 /* ----- Arrows to open and close Button Panel ------*/
+
+#edit_area {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    width: 10%;
+}
+
 .edit_show {
     display: block;
+    margin-bottom: 40px;
     font-size: 4em;
 }
 
@@ -146,12 +149,7 @@
     display: none;
 }
 
-#edit_area {
-    display: flex;
-    justify-content: flex-end;
-    box-sizing: border-box;
-    width: 10%;
-}
+
 
 /*-------- Button Panel ------*/
 #edit_btns_area{
@@ -163,9 +161,13 @@
 .collectible_option_btns{
     display: none;
     justify-content: center;
-    margin: 0;
+    margin: 0 0 10% 0;
 }
 
+
+#edit_btn, #addnew_btn, #view_coll_btn {
+    color: #fff;
+}
 
 
 /*--------------------
