--- a/collection/templates/collection/collection.html
+++ b/collection/templates/collection/collection.html
@@ -80,7 +80,7 @@
                                     {% if request.user.is_authenticated %}
                                         <div class="coll_links_area">
                                             {% for link in collectible.links.all %}
-                                                <a class="btn_small" href="{{ link.url }}">{{ link.name }}</a>
+                                                <a class="btn_small" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
                                             {% endfor %}
                                         </div>
                                      {%  else %}
@@ -103,7 +103,7 @@
 
         <!-- Reveals Embed Code-->
         <aside class="embed_code_btn_pos">
-              <button class="embed_code_btn btn btn-default">Get Embed Code</button>
+              <button class="embed_code_btn btn_small btn-default">Get Embed Code</button>
         </aside>
         <!-- Embed Code in input text field-->
         <div class="iframe-wrapper embed_code_field">
