--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,9 @@
 {% if messages %}
 <ul class="messages alert alert-success">
     {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+        {{ message }}
+    </li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -102,7 +104,7 @@
                     </ul>
                 {% if request.user.is_anonymous %}
                     <aside id="logged_in">
-                        <p>You are not logged in.</p>
+                        <p></p>
                     </aside>
                     {% else %}
                     <aside id="logged_in">
